# Architector

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
.ci_support/: environment.yml
.github/workflows/: deploy.yml  pypicheck.yml  unittests.yml
architector/: __init__.py  _version.py  arch_context_manage.py  ase_db_utilities.py  complex_construction.py  geometries.py  io_align_mol.py  io_arch_dock.py  io_calc.py  io_cluster_search.py  io_conformers.py  io_core.py  io_crest.py  io_lig.py  io_molecule.py  io_neb.py  io_obabel.py  io_process_input.py  io_ptable.py  io_samplers.py  io_symmetry.py  io_xtb_calc.py  vibrations_free_energy.py  visualization.py
architector/data/: Geometry_stats_generation.ipynb  Ligtype_binding_site_selections.ipynb  all_ref_geo_inds_dict.pkl  avg_m_oxo_dists_csd.csv  ligtype_angle_reference.csv
development/: 16-setereochemistry_control.ipynb  dipole_conformers.ipynb  n_lig_combos.py  parallel_class_dev.ipynb  rsmd_tests.ipynb  uranium_clusters.ipynb
development/.ipynb_checkpoints/: 7-Secondary_Solvation_Shell-checkpoint.ipynb
development/lig_sampling/: Sampling_ligands_downselect_step1.ipynb  Sampling_scraping_step0.ipynb  Sampling_script_forMeta_step2.ipynb  fixed_full_ligand_sample.pkl  metal_sample_dataframe.pkl
development/solubility_dev/: Soldb_workflow_dev.ipynb  compile_pkls.ipynb  flux_produce_slurm.sh  gbsa_opt.txt  (+2 more)
documentation/: Crest_Sampling_Documentation.ipynb  Debugging_Guide.ipynb  view_default_core_ligand_types.ipynb
utils/: ligand_viewing_coordinating_atom_selecting.ipynb
(+44 files in other folders)
