
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = architector/_version.py
#versionfile_build =
tag_prefix = architector-
parentdir_prefix = architector

[options.package_data]
mypkg =
    *.csv
